...
                }
            }
            .frame(width: 30, height: 20)
        }
        .tint(Color(uiColor: Config.tintColor))
        .accessibilityLabel(Text("player.nowPlaying"))
        .accessibilityIdentifier("showNowPlaying")
    }
}

